[package]
name = "savings-account"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@elrond.com>",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.25.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.25.0"

[dependencies.price-aggregator-proxy]
git = "https://github.com/ElrondNetwork/sc-chainlink-rs"
rev = "c3ed77b"
