[package]
name = "savings-account"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.32.0"

[dependencies.elrond-wasm-modules]
version = "0.32.0"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dependencies.multiversx-sc]
version = "0.45.2"

[dependencies.multiversx-sc-modules]
version = "0.45.2"
[dev-dependencies.price-aggregator]
git = "https://github.com/multiversx/mx-chainlink-sc"
rev = "1ccbb99"

[dev-dependencies.delegation-mock]
path = "../delegation-mock"

[dev-dependencies.dex-mock]
path = "../dex-mock"
