[package]
name = "savings-account-wasm"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@elrond.com>",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.savings-account]
features = [ "wasm-output-mode",]
path = ".."

[dependencies.elrond-wasm-output]
version = "0.18.2"
features = [ "wasm-output-mode",]
